# probatum

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  loom.yml  miri.yml
artifacts/current/: perf_report.json  public_output.json  verify_report.json
artifacts/final-check/: air_diagnostics.json  final_check_report.json  receipt.json
artifacts/release-check/: verify_report.json  verify_tampered_report.json
crates/probatum-air/: Cargo.toml
crates/probatum-air/src/: lib.rs
crates/probatum-arith/: Cargo.toml
crates/probatum-arith/src/: columns.rs  lib.rs  trace.rs
crates/probatum-artifacts/: Cargo.toml
crates/probatum-artifacts/src/: lib.rs
crates/probatum-cli/: Cargo.toml
crates/probatum-cli/src/: main.rs
crates/probatum-cli/tests/: e2e.rs
crates/probatum-constraints/: Cargo.toml
crates/probatum-constraints/src/: composition.rs  degrees.rs  lib.rs  residuals.rs
crates/probatum-evaluation/: Cargo.toml
crates/probatum-evaluation/src/: commit.rs  lde.rs  lib.rs  merkle.rs
crates/probatum-field/: Cargo.toml
crates/probatum-field/src/: fft.rs  goldilocks.rs  lib.rs  poly.rs  property_tests.rs
crates/probatum-fri/: Cargo.toml
crates/probatum-fri/src/: body_wire.rs  digest.rs  fold.rs  lib.rs  prove.rs  verify.rs
crates/probatum-prover/: Cargo.toml
crates/probatum-prover/benches/: integrated_prove.rs
crates/probatum-prover/src/: integrated.rs  lib.rs  property_tests.rs
crates/probatum-trace/: Cargo.toml
crates/probatum-trace/src/: lib.rs  merkle.rs  property_tests.rs
crates/probatum-transcript/: Cargo.toml
crates/probatum-transcript/src/: lib.rs
crates/probatum-verifier/: Cargo.toml
crates/probatum-verifier/benches/: verify_proof.rs
crates/probatum-verifier/src/: lib.rs
crates/probatum-vm/: Cargo.toml
crates/probatum-vm/src/: lib.rs  property_tests.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_proof.rs  verify_detailed.rs
