[workspace]
members = [
    "crates/probatum-air",
    "crates/probatum-arith",
    "crates/probatum-constraints",
    "crates/probatum-evaluation",
    "crates/probatum-transcript",
    "crates/probatum-artifacts",
    "crates/probatum-cli",
    "crates/probatum-fri",
    "crates/probatum-field",
    "crates/probatum-prover",
    "crates/probatum-trace",
    "crates/probatum-verifier",
    "crates/probatum-vm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Rozolini/probatum"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
criterion = "0.5"
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
