[package]
name = "probatum-arith"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Arithmetized trace columns over Goldilocks (phase 6)"

[dependencies]
probatum-air = { path = "../probatum-air" }
probatum-field = { path = "../probatum-field" }
probatum-trace = { path = "../probatum-trace" }
thiserror.workspace = true
