[package]
name = "probatum-constraints"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AIR constraint residuals and composition over arithmetized traces (phase 7)"

[dependencies]
probatum-arith = { path = "../probatum-arith" }
probatum-field = { path = "../probatum-field" }
thiserror.workspace = true

[dev-dependencies]
probatum-air = { path = "../probatum-air" }
probatum-trace = { path = "../probatum-trace" }
