[package]
name = "probatum-evaluation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "LDE on trace columns and Merkle commitments to evaluation rows (phase 8)"

[dependencies]
blake3.workspace = true
probatum-arith = { path = "../probatum-arith" }
probatum-field = { path = "../probatum-field" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
probatum-air = { path = "../probatum-air" }
probatum-trace = { path = "../probatum-trace" }
