[package]
name = "probatum-transcript"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "BLAKE3 Fiat–Shamir transcript with domain separation (phase 9)"

[dependencies]
blake3.workspace = true

[dev-dependencies]
proptest = { workspace = true }
